# neo4j-parallel-spark-loader

./: .gitignore  CHANGELOG.md  Makefile  Neo4j-0f015ca4-Created-2025-01-09.txt  README.md  pyproject.toml  test_viz.ipynb
.github/: pull_request_template.md
.github/workflows/: pr.yaml
benchmarking/: README.md  _.ipynb  analyze_results.ipynb  benchmark.ipynb  databricks_benchmarking.py  example.env  main.py  visualize_groups_and_batches.py
benchmarking/data/: bipartite_data.csv  create_data.py  predefined_components_data.csv  remote_datasets.py
benchmarking/utils/: analyze.py  benchmark.py  database.py  healthcheck.py  neo4j_driver.py  results.py  spark.py  visualize.py
data/: download_datasets.py  get_datasets.py
examples/: bipartite_amazon_ratings.ipynb  heatmap_example.ipynb  monopartite_twitch_gamers.ipynb  predefined_components_reddit_threads.ipynb  twitch_gamers.ipynb  workflow_example.py
neo4j_parallel_spark_loader/: __init__.py
neo4j_parallel_spark_loader/bipartite/: batching.py  grouping.py
neo4j_parallel_spark_loader/monopartite/: batching.py  grouping.py
neo4j_parallel_spark_loader/predefined_components/: __init__.py  grouping.py
neo4j_parallel_spark_loader/utils/: __init__.py  build_relationship.py  ingest.py  verify_spark.py
neo4j_parallel_spark_loader/visualize/: heatmap.py
parallel_spark_loader/bipartite/: batching.py  grouping.py
parallel_spark_loader/monopartite/: batching.py  grouping.py  grouping_and_batching.py
parallel_spark_loader/predefined_components/: batching.py  (+1 more)
scripts/: update_changelog.sh
tests/: conftest.py
(+80 files in other folders)
